--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "test:e2e": "jest --config ./apps/socket-service/test/jest-e2e.json"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.12.2",
+    "@grpc/proto-loader": "^0.7.13",
     "@nestjs/common": "^10.4.7",
     "@nestjs/core": "^10.4.7",
     "@nestjs/platform-express": "^10.4.7",
+    "@nestjs/platform-socket.io": "^10.4.7",
+    "@nestjs/websockets": "^10.4.7",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
